# etchy

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
ci-workflows/: release.yml
etchy-core/: Cargo.toml
etchy-core/src/: badblocks.rs  flash.rs  hash.rs  lib.rs  persistence.rs  types.rs
etchy-core/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
etchy-helper/: Cargo.toml
etchy-helper/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: etchy-helper-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: elevate.rs  lib.rs  main.rs
ui/: app.js  index.html  style.css
ui/i18n/: strings.js
