[workspace]
resolver = "2"
members = ["etchy-core", "etchy-helper", "src-tauri"]
default-members = ["etchy-core", "etchy-helper"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Etchy Contributors"]
repository = "https://github.com/etchy-app/etchy"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"

[profile.release]
lto = true
strip = true
opt-level = 3
