[package]
name = "etchy-helper"
description = "Etchy privileged helper: performs flashing as root/admin, streaming JSON progress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "etchy-helper"
path = "src/main.rs"

[dependencies]
etchy-core = { path = "../etchy-core" }
serde.workspace = true
serde_json.workspace = true
